Rewrote coven hut structure code